# cpp_projects

CLION/: CMakeLists.txt  main.cpp
CMakeProject1/: CMakeProject1.cpp  CMakeProject1.h
Ivan's_project/: Ivan's_project.sln
ProjectCpp/: ProjectCpp.sln
ProjectForLearning/: ProjectForLearning.sln
StrRev/: StrRev.sln
WinAPIProcThreads/: WinAPIProcThreads.cpp  WinAPIProcThreads.sln  WinAPIProcThreads.vcxproj  WinAPIProcThreads.vcxproj.filters
addDeleteNewElement/: Source.cpp  addDeleteNewElement.sln  addDeleteNewElement.vcxproj
alogrithms/: alogrithms.sln
array_of_pointers/: array_of_pointers.sln
binary_search/: binary_search.cpp  binary_search.sln  binary_search.vcxproj
concatenation_of_strings/: concatenation_of_strings.sln
conditional-compilation/: conditional-compilation.sln
donut/: donut.sln
dynamic_array/: dynamic_array.sln
error/: error.sln
function_overloading/: function_overloading.cpp  function_overloading.sln  function_overloading.vcxproj
introducingToClasses/: introducingToClasses.cpp  introducingToClasses.sln  introducingToClasses.vcxproj  introducingToClasses.vcxproj.filters
littleTest/: littleTest.sln  littleTest.vcxproj  main.cpp
macros_preprocessors/: macros_preprocessors.sln
passwd_generator/: passwd_generator.cpp  passwd_generator.sln  passwd_generator.vcxproj  passwd_generator.vcxproj.filters
pointerToFunction/: pointerToFunction.sln
pointer_to_pointer/: pointer_to_pointer.sln
pointers/: pointers.sln
structures_learning/structures_learning/: CMakeLists.txt  structures_learning.cpp  structures_learning.h
(+239 files in other folders)
